--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
   <fragment
     android:id="@+id/todayFragment"
     android:name="com.kate.lesson.TodayFragment"
-    android:label="TodayFragment">
+    android:label="@string/today">
     <action
       android:id="@+id/action_todayFragment_to_profileFragment"
       app:destination="@id/profileFragment" />
@@ -14,7 +14,7 @@
   <fragment
     android:id="@+id/weeklyFragment"
     android:name="com.kate.lesson.WeeklyFragment"
-    android:label="WeeklyFragment">
+    android:label="@string/weekly">
     <action
       android:id="@+id/action_weeklyFragment_to_profileFragment"
       app:destination="@id/profileFragment" />
@@ -22,7 +22,7 @@
   <fragment
     android:id="@+id/yesterdayFragment"
     android:name="com.kate.lesson.YesterdayFragment"
-    android:label="YesterdayFragment">
+    android:label="@string/yesterday">
     <action
       android:id="@+id/action_yesterdayFragment_to_profileFragment"
       app:destination="@id/profileFragment" />
@@ -30,7 +30,7 @@
   <fragment
     android:id="@+id/monthlyFragment"
     android:name="com.kate.lesson.MonthlyFragment"
-    android:label="MonthlyFragment">
+    android:label="@string/monthly">
     <action
       android:id="@+id/action_monthlyFragment_to_profileFragment"
       app:destination="@id/profileFragment" />
@@ -38,7 +38,7 @@
   <fragment
     android:id="@+id/profileFragment"
     android:name="com.kate.lesson.ProfileFragment"
-    android:label="ProfileFragment">
+    android:label="@string/profile">
     <argument
       android:name="rank"
       app:argType="com.kate.lesson.model.Rank" />
